HighLevelLanguage/parser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    FAILFLAG
    DONEFLAG

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> agentDecl mwblock decls initblock
Rule 2     agentDecl -> AGENT BR CID
Rule 3     initblock -> INIT LPAREN RPAREN LCURLY events RCURLY
Rule 4     events -> event events
Rule 5     events -> empty
Rule 6     event -> robotinit
Rule 7     event -> getpos SEMI
Rule 8     event -> varname LPAREN RPAREN LCURLY pre eff RCURLY
Rule 9     event -> EXIT LPAREN RPAREN LCURLY pre eff RCURLY
Rule 10    getpos -> varname EQLS GETMYPOS LPAREN RPAREN
Rule 11    robotinit -> ROBOT LPAREN RPAREN SEMI
Rule 12    pre -> PRE LPAREN cond RPAREN SEMI
Rule 13    pre -> PRE LPAREN TRUE RPAREN SEMI
Rule 14    cond -> rel
Rule 15    cond -> expr
Rule 16    cond -> cond AND cond
Rule 17    cond -> cond OR cond
Rule 18    cond -> NOT expr
Rule 19    cond -> LPAREN cond RPAREN
Rule 20    rel -> expr EQ expr
Rule 21    rel -> expr NEQ expr
Rule 22    rel -> expr GEQ expr
Rule 23    rel -> expr LEQ expr
Rule 24    rel -> expr GE expr
Rule 25    rel -> expr LE expr
Rule 26    eff -> EFF LCURLY stmts RCURLY
Rule 27    stmts -> stmt stmts
Rule 28    stmts -> empty
Rule 29    stmt -> asgn
Rule 30    stmt -> ite
Rule 31    stmt -> atomic
Rule 32    stmt -> funcCall
Rule 33    stmt -> callreachavoid
Rule 34    callreachavoid -> REACHAVOID LPAREN varname COMMA val RPAREN
Rule 35    ite -> IF LPAREN cond RPAREN LCURLY stmts RCURLY ELSE LCURLY stmts RCURLY
Rule 36    funcCall -> varname LPAREN RPAREN SEMI
Rule 37    atomic -> ATOMIC LCURLY stmts RCURLY
Rule 38    asgn -> varname EQLS expr SEMI
Rule 39    asgn -> varname EQLS funcCall
Rule 40    asgn -> varname INCR SEMI
Rule 41    mwblock -> MW LCURLY decls RCURLY
Rule 42    decls -> decl decls
Rule 43    decls -> sharedecl decls
Rule 44    decls -> enumdecl decls
Rule 45    decls -> empty
Rule 46    empty -> <empty>
Rule 47    decl -> type varname SEMI
Rule 48    decl -> type varname EQLS val SEMI
Rule 49    enumdecl -> ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
Rule 50    varnames -> varname COMMA varnames
Rule 51    varnames -> varname
Rule 52    sharedecl -> SHARED type varname SEMI
Rule 53    sharedecl -> SHARED type varname EQLS val SEMI
Rule 54    val -> INUM
Rule 55    val -> FNUM
Rule 56    val -> TRUE
Rule 57    val -> FALSE
Rule 58    expr -> val
Rule 59    expr -> varname
Rule 60    expr -> expr PLUS expr
Rule 61    expr -> expr MINUS expr
Rule 62    expr -> expr TIMES expr
Rule 63    expr -> expr BY expr
Rule 64    expr -> LPAREN expr RPAREN
Rule 65    type -> INT
Rule 66    type -> FLOAT
Rule 67    type -> BOOL
Rule 68    type -> ITEMPOSITION
Rule 69    varname -> LID
Rule 70    varname -> CID

Terminals, with rules where they appear

AGENT                : 2
AND                  : 16
ATOMIC               : 37
BOOL                 : 67
BR                   : 2
BY                   : 63
CID                  : 2 70
COMMA                : 34 50
DONEFLAG             : 
EFF                  : 26
ELSE                 : 35
ENUM                 : 49
EQ                   : 20
EQLS                 : 10 38 39 48 49 53
EXIT                 : 9
FAILFLAG             : 
FALSE                : 57
FLOAT                : 66
FNUM                 : 55
GE                   : 24
GEQ                  : 22
GETMYPOS             : 10
IF                   : 35
INCR                 : 40
INIT                 : 3
INT                  : 65
INUM                 : 54
ITEMPOSITION         : 68
LCURLY               : 3 8 9 26 35 35 37 41 49
LE                   : 25
LEQ                  : 23
LID                  : 69
LPAREN               : 3 8 9 10 11 12 13 19 34 35 36 64
MINUS                : 61
MW                   : 41
NEQ                  : 21
NOT                  : 18
OR                   : 17
PLUS                 : 60
PRE                  : 12 13
RCURLY               : 3 8 9 26 35 35 37 41 49
REACHAVOID           : 34
ROBOT                : 11
RPAREN               : 3 8 9 10 11 12 13 19 34 35 36 64
SEMI                 : 7 11 12 13 36 38 40 47 48 49 52 53
SHARED               : 52 53
TIMES                : 62
TRUE                 : 13 56
error                : 

Nonterminals, with rules where they appear

agentDecl            : 1
asgn                 : 29
atomic               : 31
callreachavoid       : 33
cond                 : 12 16 16 17 17 19 35
decl                 : 42
decls                : 1 41 42 43 44
eff                  : 8 9
empty                : 5 28 45
enumdecl             : 44
event                : 4
events               : 3 4
expr                 : 15 18 20 20 21 21 22 22 23 23 24 24 25 25 38 60 60 61 61 62 62 63 63 64
funcCall             : 32 39
getpos               : 7
initblock            : 1
ite                  : 30
mwblock              : 1
pgm                  : 0
pre                  : 8 9
rel                  : 14
robotinit            : 6
sharedecl            : 43
stmt                 : 27
stmts                : 26 27 35 35 37
type                 : 47 48 52 53
val                  : 34 48 53 58
varname              : 8 10 34 36 38 39 40 47 48 49 49 49 50 51 52 53 59
varnames             : 49 50

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . agentDecl mwblock decls initblock
    (2) agentDecl -> . AGENT BR CID

    AGENT           shift and go to state 2

    agentDecl                      shift and go to state 3
    pgm                            shift and go to state 1

state 1

    (0) S' -> pgm .



state 2

    (2) agentDecl -> AGENT . BR CID

    BR              shift and go to state 4


state 3

    (1) pgm -> agentDecl . mwblock decls initblock
    (41) mwblock -> . MW LCURLY decls RCURLY

    MW              shift and go to state 6

    mwblock                        shift and go to state 5

state 4

    (2) agentDecl -> AGENT BR . CID

    CID             shift and go to state 7


state 5

    (1) pgm -> agentDecl mwblock . decls initblock
    (42) decls -> . decl decls
    (43) decls -> . sharedecl decls
    (44) decls -> . enumdecl decls
    (45) decls -> . empty
    (47) decl -> . type varname SEMI
    (48) decl -> . type varname EQLS val SEMI
    (52) sharedecl -> . SHARED type varname SEMI
    (53) sharedecl -> . SHARED type varname EQLS val SEMI
    (49) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (46) empty -> .
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . BOOL
    (68) type -> . ITEMPOSITION

    SHARED          shift and go to state 18
    ENUM            shift and go to state 13
    INIT            reduce using rule 46 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    BOOL            shift and go to state 17
    ITEMPOSITION    shift and go to state 9

    decl                           shift and go to state 8
    enumdecl                       shift and go to state 16
    sharedecl                      shift and go to state 10
    decls                          shift and go to state 19
    type                           shift and go to state 11
    empty                          shift and go to state 12

state 6

    (41) mwblock -> MW . LCURLY decls RCURLY

    LCURLY          shift and go to state 20


state 7

    (2) agentDecl -> AGENT BR CID .

    MW              reduce using rule 2 (agentDecl -> AGENT BR CID .)


state 8

    (42) decls -> decl . decls
    (42) decls -> . decl decls
    (43) decls -> . sharedecl decls
    (44) decls -> . enumdecl decls
    (45) decls -> . empty
    (47) decl -> . type varname SEMI
    (48) decl -> . type varname EQLS val SEMI
    (52) sharedecl -> . SHARED type varname SEMI
    (53) sharedecl -> . SHARED type varname EQLS val SEMI
    (49) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (46) empty -> .
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . BOOL
    (68) type -> . ITEMPOSITION

    SHARED          shift and go to state 18
    ENUM            shift and go to state 13
    INIT            reduce using rule 46 (empty -> .)
    RCURLY          reduce using rule 46 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    BOOL            shift and go to state 17
    ITEMPOSITION    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 10
    enumdecl                       shift and go to state 16
    decls                          shift and go to state 21
    type                           shift and go to state 11
    empty                          shift and go to state 12

state 9

    (68) type -> ITEMPOSITION .

    LID             reduce using rule 68 (type -> ITEMPOSITION .)
    CID             reduce using rule 68 (type -> ITEMPOSITION .)


state 10

    (43) decls -> sharedecl . decls
    (42) decls -> . decl decls
    (43) decls -> . sharedecl decls
    (44) decls -> . enumdecl decls
    (45) decls -> . empty
    (47) decl -> . type varname SEMI
    (48) decl -> . type varname EQLS val SEMI
    (52) sharedecl -> . SHARED type varname SEMI
    (53) sharedecl -> . SHARED type varname EQLS val SEMI
    (49) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (46) empty -> .
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . BOOL
    (68) type -> . ITEMPOSITION

    SHARED          shift and go to state 18
    ENUM            shift and go to state 13
    INIT            reduce using rule 46 (empty -> .)
    RCURLY          reduce using rule 46 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    BOOL            shift and go to state 17
    ITEMPOSITION    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 10
    enumdecl                       shift and go to state 16
    decls                          shift and go to state 22
    type                           shift and go to state 11
    empty                          shift and go to state 12

state 11

    (47) decl -> type . varname SEMI
    (48) decl -> type . varname EQLS val SEMI
    (69) varname -> . LID
    (70) varname -> . CID

    LID             shift and go to state 23
    CID             shift and go to state 24

    varname                        shift and go to state 25

state 12

    (45) decls -> empty .

    RCURLY          reduce using rule 45 (decls -> empty .)
    INIT            reduce using rule 45 (decls -> empty .)


state 13

    (49) enumdecl -> ENUM . varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (69) varname -> . LID
    (70) varname -> . CID

    LID             shift and go to state 23
    CID             shift and go to state 24

    varname                        shift and go to state 26

state 14

    (65) type -> INT .

    LID             reduce using rule 65 (type -> INT .)
    CID             reduce using rule 65 (type -> INT .)


state 15

    (66) type -> FLOAT .

    LID             reduce using rule 66 (type -> FLOAT .)
    CID             reduce using rule 66 (type -> FLOAT .)


state 16

    (44) decls -> enumdecl . decls
    (42) decls -> . decl decls
    (43) decls -> . sharedecl decls
    (44) decls -> . enumdecl decls
    (45) decls -> . empty
    (47) decl -> . type varname SEMI
    (48) decl -> . type varname EQLS val SEMI
    (52) sharedecl -> . SHARED type varname SEMI
    (53) sharedecl -> . SHARED type varname EQLS val SEMI
    (49) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (46) empty -> .
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . BOOL
    (68) type -> . ITEMPOSITION

    SHARED          shift and go to state 18
    ENUM            shift and go to state 13
    INIT            reduce using rule 46 (empty -> .)
    RCURLY          reduce using rule 46 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    BOOL            shift and go to state 17
    ITEMPOSITION    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 10
    enumdecl                       shift and go to state 16
    decls                          shift and go to state 27
    type                           shift and go to state 11
    empty                          shift and go to state 12

state 17

    (67) type -> BOOL .

    LID             reduce using rule 67 (type -> BOOL .)
    CID             reduce using rule 67 (type -> BOOL .)


state 18

    (52) sharedecl -> SHARED . type varname SEMI
    (53) sharedecl -> SHARED . type varname EQLS val SEMI
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . BOOL
    (68) type -> . ITEMPOSITION

    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    BOOL            shift and go to state 17
    ITEMPOSITION    shift and go to state 9

    type                           shift and go to state 28

state 19

    (1) pgm -> agentDecl mwblock decls . initblock
    (3) initblock -> . INIT LPAREN RPAREN LCURLY events RCURLY

    INIT            shift and go to state 30

    initblock                      shift and go to state 29

state 20

    (41) mwblock -> MW LCURLY . decls RCURLY
    (42) decls -> . decl decls
    (43) decls -> . sharedecl decls
    (44) decls -> . enumdecl decls
    (45) decls -> . empty
    (47) decl -> . type varname SEMI
    (48) decl -> . type varname EQLS val SEMI
    (52) sharedecl -> . SHARED type varname SEMI
    (53) sharedecl -> . SHARED type varname EQLS val SEMI
    (49) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (46) empty -> .
    (65) type -> . INT
    (66) type -> . FLOAT
    (67) type -> . BOOL
    (68) type -> . ITEMPOSITION

    SHARED          shift and go to state 18
    ENUM            shift and go to state 13
    RCURLY          reduce using rule 46 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    BOOL            shift and go to state 17
    ITEMPOSITION    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 10
    enumdecl                       shift and go to state 16
    decls                          shift and go to state 31
    type                           shift and go to state 11
    empty                          shift and go to state 12

state 21

    (42) decls -> decl decls .

    RCURLY          reduce using rule 42 (decls -> decl decls .)
    INIT            reduce using rule 42 (decls -> decl decls .)


state 22

    (43) decls -> sharedecl decls .

    RCURLY          reduce using rule 43 (decls -> sharedecl decls .)
    INIT            reduce using rule 43 (decls -> sharedecl decls .)


state 23

    (69) varname -> LID .

    PLUS            reduce using rule 69 (varname -> LID .)
    MINUS           reduce using rule 69 (varname -> LID .)
    TIMES           reduce using rule 69 (varname -> LID .)
    BY              reduce using rule 69 (varname -> LID .)
    RPAREN          reduce using rule 69 (varname -> LID .)
    AND             reduce using rule 69 (varname -> LID .)
    OR              reduce using rule 69 (varname -> LID .)
    EQ              reduce using rule 69 (varname -> LID .)
    NEQ             reduce using rule 69 (varname -> LID .)
    GEQ             reduce using rule 69 (varname -> LID .)
    LEQ             reduce using rule 69 (varname -> LID .)
    GE              reduce using rule 69 (varname -> LID .)
    LE              reduce using rule 69 (varname -> LID .)
    COMMA           reduce using rule 69 (varname -> LID .)
    SEMI            reduce using rule 69 (varname -> LID .)
    EQLS            reduce using rule 69 (varname -> LID .)
    INCR            reduce using rule 69 (varname -> LID .)
    LPAREN          reduce using rule 69 (varname -> LID .)
    RCURLY          reduce using rule 69 (varname -> LID .)
    LCURLY          reduce using rule 69 (varname -> LID .)


state 24

    (70) varname -> CID .

    PLUS            reduce using rule 70 (varname -> CID .)
    MINUS           reduce using rule 70 (varname -> CID .)
    TIMES           reduce using rule 70 (varname -> CID .)
    BY              reduce using rule 70 (varname -> CID .)
    RPAREN          reduce using rule 70 (varname -> CID .)
    AND             reduce using rule 70 (varname -> CID .)
    OR              reduce using rule 70 (varname -> CID .)
    EQ              reduce using rule 70 (varname -> CID .)
    NEQ             reduce using rule 70 (varname -> CID .)
    GEQ             reduce using rule 70 (varname -> CID .)
    LEQ             reduce using rule 70 (varname -> CID .)
    GE              reduce using rule 70 (varname -> CID .)
    LE              reduce using rule 70 (varname -> CID .)
    COMMA           reduce using rule 70 (varname -> CID .)
    SEMI            reduce using rule 70 (varname -> CID .)
    EQLS            reduce using rule 70 (varname -> CID .)
    INCR            reduce using rule 70 (varname -> CID .)
    LPAREN          reduce using rule 70 (varname -> CID .)
    RCURLY          reduce using rule 70 (varname -> CID .)
    LCURLY          reduce using rule 70 (varname -> CID .)


state 25

    (47) decl -> type varname . SEMI
    (48) decl -> type varname . EQLS val SEMI

    SEMI            shift and go to state 33
    EQLS            shift and go to state 32


state 26

    (49) enumdecl -> ENUM varname . LCURLY varnames RCURLY varname EQLS varname SEMI

    LCURLY          shift and go to state 34


state 27

    (44) decls -> enumdecl decls .

    RCURLY          reduce using rule 44 (decls -> enumdecl decls .)
    INIT            reduce using rule 44 (decls -> enumdecl decls .)


state 28

    (52) sharedecl -> SHARED type . varname SEMI
    (53) sharedecl -> SHARED type . varname EQLS val SEMI
    (69) varname -> . LID
    (70) varname -> . CID

    LID             shift and go to state 23
    CID             shift and go to state 24

    varname                        shift and go to state 35

state 29

    (1) pgm -> agentDecl mwblock decls initblock .

    $end            reduce using rule 1 (pgm -> agentDecl mwblock decls initblock .)


state 30

    (3) initblock -> INIT . LPAREN RPAREN LCURLY events RCURLY

    LPAREN          shift and go to state 36


state 31

    (41) mwblock -> MW LCURLY decls . RCURLY

    RCURLY          shift and go to state 37


state 32

    (48) decl -> type varname EQLS . val SEMI
    (54) val -> . INUM
    (55) val -> . FNUM
    (56) val -> . TRUE
    (57) val -> . FALSE

    INUM            shift and go to state 41
    FNUM            shift and go to state 40
    TRUE            shift and go to state 42
    FALSE           shift and go to state 38

    val                            shift and go to state 39

state 33

    (47) decl -> type varname SEMI .

    SHARED          reduce using rule 47 (decl -> type varname SEMI .)
    ENUM            reduce using rule 47 (decl -> type varname SEMI .)
    INT             reduce using rule 47 (decl -> type varname SEMI .)
    FLOAT           reduce using rule 47 (decl -> type varname SEMI .)
    BOOL            reduce using rule 47 (decl -> type varname SEMI .)
    ITEMPOSITION    reduce using rule 47 (decl -> type varname SEMI .)
    INIT            reduce using rule 47 (decl -> type varname SEMI .)
    RCURLY          reduce using rule 47 (decl -> type varname SEMI .)


state 34

    (49) enumdecl -> ENUM varname LCURLY . varnames RCURLY varname EQLS varname SEMI
    (50) varnames -> . varname COMMA varnames
    (51) varnames -> . varname
    (69) varname -> . LID
    (70) varname -> . CID

    LID             shift and go to state 23
    CID             shift and go to state 24

    varname                        shift and go to state 43
    varnames                       shift and go to state 44

state 35

    (52) sharedecl -> SHARED type varname . SEMI
    (53) sharedecl -> SHARED type varname . EQLS val SEMI

    SEMI            shift and go to state 45
    EQLS            shift and go to state 46


state 36

    (3) initblock -> INIT LPAREN . RPAREN LCURLY events RCURLY

    RPAREN          shift and go to state 47


state 37

    (41) mwblock -> MW LCURLY decls RCURLY .

    SHARED          reduce using rule 41 (mwblock -> MW LCURLY decls RCURLY .)
    ENUM            reduce using rule 41 (mwblock -> MW LCURLY decls RCURLY .)
    INT             reduce using rule 41 (mwblock -> MW LCURLY decls RCURLY .)
    FLOAT           reduce using rule 41 (mwblock -> MW LCURLY decls RCURLY .)
    BOOL            reduce using rule 41 (mwblock -> MW LCURLY decls RCURLY .)
    ITEMPOSITION    reduce using rule 41 (mwblock -> MW LCURLY decls RCURLY .)
    INIT            reduce using rule 41 (mwblock -> MW LCURLY decls RCURLY .)


state 38

    (57) val -> FALSE .

    EQ              reduce using rule 57 (val -> FALSE .)
    NEQ             reduce using rule 57 (val -> FALSE .)
    GEQ             reduce using rule 57 (val -> FALSE .)
    LEQ             reduce using rule 57 (val -> FALSE .)
    GE              reduce using rule 57 (val -> FALSE .)
    LE              reduce using rule 57 (val -> FALSE .)
    PLUS            reduce using rule 57 (val -> FALSE .)
    MINUS           reduce using rule 57 (val -> FALSE .)
    TIMES           reduce using rule 57 (val -> FALSE .)
    BY              reduce using rule 57 (val -> FALSE .)
    AND             reduce using rule 57 (val -> FALSE .)
    OR              reduce using rule 57 (val -> FALSE .)
    RPAREN          reduce using rule 57 (val -> FALSE .)
    SEMI            reduce using rule 57 (val -> FALSE .)


state 39

    (48) decl -> type varname EQLS val . SEMI

    SEMI            shift and go to state 48


state 40

    (55) val -> FNUM .
